Completed the auto-generation of glossary/index.html using the new radical datafiles.

--- a/X2_glossary/index.html
+++ b/X2_glossary/index.html
@@ -10,243 +10,20 @@ base: ../
 <section class="rad_index">
   <p>
   {% assign last_strokes = 0 %}
-  {% for rad in site.data.glossary.radicals %}
-    {% assign current_strokes = rad.strokes %}
+  {% for radical in site.data.glossary %}
+    {% assign current_strokes = radical[1].strokes %}
     {% if current_strokes > last_strokes %}
       <strong>{{ current_strokes }}</strong>:
       {% assign last_strokes = current_strokes %}
     {% endif %}
-    <a title="{{ rad.number }}" href="#rad{{ rad.number }}">{{ rad.cjk }}</a>
+    <a title="{{ radical[1].number }}" href="#rad{{ radical[1].number }}">{{ radical[1].cjk }}</a>
   {% endfor %}
   </p>
 </section>
 <hr/>
-<h2 id="rad001">一</h2>
-<p>1: <a href="radical001.html#_一">一</a></p>
-<h2 id="rad002">丨</h2>
-<h2 id="rad003">丶</h2>
-<h2 id="rad004">丿</h2>
-<h2 id="rad005">乙</h2>
-<h2 id="rad006">亅</h2>
-<h2 id="rad007">二</h2>
-<p>0: <a href="radical007.html#_二">二</a>
-<h2 id="rad008">亠</h2>
-<h2 id="rad009">人</h2>
-<p>0: <a href="radical009.html#_人">人</a></p>
-<p>5: <a href="radical009.html#_佛">佛</a></p>
-<h2 id="rad010">儿</h2>
-<h2 id="rad011">入</h2>
-<h2 id="rad012">八</h2>
-<h2 id="rad013">冂</h2>
-<h2 id="rad014">冖</h2>
-<h2 id="rad015">冫</h2>
-<h2 id="rad016">几</h2>
-<h2 id="rad017">凵</h2>
-<h2 id="rad018">刀</h2>
-<p>2: <a href="radical018.html#_分">分</a></p>
-<h2 id="rad019">力</h2>
-<h2 id="rad020">勹</h2>
-<h2 id="rad021">匕</h2>
-<h2 id="rad022">匚</h2>
-<h2 id="rad023">匸</h2>
-<h2 id="rad024">十</h2>
-<h2 id="rad025">卜</h2>
-<h2 id="rad026">卩</h2>
-<h2 id="rad027">厂</h2>
-<h2 id="rad028">厶</h2>
-<h2 id="rad029">又</h2>
-<h2 id="rad030">口</h2>
-<h2 id="rad031">囗</h2>
-<h2 id="rad032">土</h2>
-<p>3: <a href="radical032.html#在">在</a></p>
-<h2 id="rad033">士</h2>
-<h2 id="rad034">夂</h2>
-<h2 id="rad035">夊</h2>
-<h2 id="rad036">夕</h2>
-<h2 id="rad037">大</h2>
-<h2 id="rad038"><a href="radical038.html">女</a></h2>
-<p>3: <a href="radical038.html#_如">如</a></p>
-<h2 id="rad039">子</h2>
-<h2 id="rad040">宀</h2>
-<h2 id="rad041">寸</h2>
-<h2 id="rad042">小</h2>
-<h2 id="rad043">尢</h2>
-<h2 id="rad044">尸</h2>
-<p>0: <a href="radical044.html#_尸">尸</a></p>
-<h2 id="rad045">屮</h2>
-<h2 id="rad046">山</h2>
-<h2 id="rad047">川</h2>
-<h2 id="rad048">工</h2>
-<h2 id="rad049">己</h2>
-<h2 id="rad050">巾</h2>
-<h2 id="rad051">干</h2>
-<h2 id="rad052">幺</h2>
-<h2 id="rad053">广</h2>
-<h2 id="rad054">廴</h2>
-<h2 id="rad055">廾</h2>
-<h2 id="rad056">弋</h2>
-<h2 id="rad057">弓</h2>
-<h2 id="rad058">彑</h2>
-<h2 id="rad059">彡</h2>
-<h2 id="rad060">彳</h2>
-<h2 id="rad061">心 忄</h2>
-<h2 id="rad062"><a href="radical062.html">戈</a></h2>
-<p>3: <a href="radical062.html#_我">我</a></p>
-<h2 id="rad063">戸</h2>
-<h2 id="rad064">手 扌</h2>
-<p>5: <a href="radical064#_拘">拘</a></p>
-<h2 id="rad065">支</h2>
-<h2 id="rad066">攴 攵</h2>
-<h2 id="rad067">文</h2>
-<h2 id="rad068">斗</h2>
-<h2 id="rad069">斤</h2>
-<h2 id="rad070">方</h2>
-<h2 id="rad071">无</h2>
-<h2 id="rad072">日</h2>
-<h2 id="rad073">曰</h2>
-<h2 id="rad074">月</h2>
-<h2 id="rad075">木</h2>
-<h2 id="rad076">欠</h2>
-<h2 id="rad077">止</h2>
-<h2 id="rad078">歹</h2>
-<h2 id="rad079">殳</h2>
-<h2 id="rad080">毋</h2>
-<h2 id="rad081">比</h2>
-<h2 id="rad082">毛</h2>
-<h2 id="rad083">氏</h2>
-<h2 id="rad084">气</h2>
-<h2 id="rad085">水 氵</h2>
-<h2 id="rad086">火 灬</h2>
-<h2 id="rad087">爪</h2>
-<h2 id="rad088">父</h2>
-<h2 id="rad089">爻</h2>
-<h2 id="rad090">爿</h2>
-<h2 id="rad091">片</h2>
-<h2 id="rad092">牙</h2>
-<h2 id="rad093">牛</h2>
-<h2 id="rad094">犬</h2>
-<h2 id="rad095">玄</h2>
-<h2 id="rad096">玉 王</h2>
-<h2 id="rad097">瓜</h2>
-<h2 id="rad098">瓦</h2>
-<h2 id="rad099">甘</h2>
-<h2 id="rad100">生</h2>
-<h2 id="rad101">用</h2>
-<h2 id="rad102">田</h2>
-<h2 id="rad103">疋</h2>
-<h2 id="rad104">疒</h2>
-<h2 id="rad105">癶</h2>
-<h2 id="rad106">白</h2>
-<h2 id="rad107">皮</h2>
-<h2 id="rad108">皿</h2>
-<h2 id="rad109">目</h2>
-<h2 id="rad110">矛</h2>
-<h2 id="rad111">矢</h2>
-<h2 id="rad112">石</h2>
-<h2 id="rad113">示</h2>
-<h2 id="rad114">禸</h2>
-<h2 id="rad115">禾</h2>
-<h2 id="rad116">穴</h2>
-<h2 id="rad117">立</h2>
-<h2 id="rad118">竹</h2>
-<p>5: <a href="radical118.html#第">第</a></p>
-<h2 id="rad119">米</h2>
-<h2 id="rad120">糸</h2>
-<h2 id="rad121">缶</h2>
-<h2 id="rad122">网　罒　罓</h2>
-<h2 id="rad123">羊</h2>
-<h2 id="rad124">羽</h2>
-<h2 id="rad125">老</h2>
-<h2 id="rad126">而</h2>
-<h2 id="rad127">耒</h2>
-<h2 id="rad128">耳</h2>
-<p>8: <a href="radical128.html#_聞">聞</a></p>
-<h2 id="rad129">聿</h2>
-<h2 id="rad130">肉 月</h2>
-<h2 id="rad131">臣</h2>
-<h2 id="rad132">自</h2>
-<h2 id="rad133">至</h2>
-<h2 id="rad134">臼</h2>
-<h2 id="rad135">舌</h2>
-<h2 id="rad136">舛</h2>
-<h2 id="rad137">舟</h2>
-<h2 id="rad138">艮</h2>
-<h2 id="rad139">色</h2>
-<h2 id="rad140">艸</h2>
-<h2 id="rad141">虍</h2>
-<h2 id="rad142">虫</h2>
-<h2 id="rad143">血</h2>
-<h2 id="rad144">行</h2>
-<h2 id="rad145">衣</h2>
-<h2 id="rad146">西</h2>
-<h2 id="rad147">見</h2>
-<h2 id="rad148">角</h2>
-<h2 id="rad149">言</h2>
-<h2 id="rad150">谷</h2>
-<h2 id="rad151">豆</h2>
-<h2 id="rad152">豕</h2>
-<h2 id="rad153">豸</h2>
-<h2 id="rad154">貝</h2>
-<h2 id="rad155">赤</h2>
-<h2 id="rad156">走</h2>
-<h2 id="rad157">足</h2>
-<h2 id="rad158">身</h2>
-<h2 id="rad159">車</h2>
-<h2 id="rad160">辛</h2>
-<h2 id="rad161">辰</h2>
-<h2 id="rad162">辵辶</h2>
-<h2 id="rad163">邑</h2>
-<h2 id="rad164">酉</h2>
-<h2 id="rad165">釆</h2>
-<h2 id="rad166">里</h2>
-<h2 id="rad167">金</h2>
-<h2 id="rad168">長</h2>
-<h2 id="rad169">門</h2>
-<p>6: <a href="radical128.html#_聞">聞</a></p>
-<h2 id="rad170">阜</h2>
-<h2 id="rad171">隶</h2>
-<h2 id="rad172">隹</h2>
-<h2 id="rad173">雨</h2>
-<p>12: <a href="radical173.html#_露"></a>露</p>
-<h2 id="rad174">青</h2>
-<h2 id="rad175">非</h2>
-<h2 id="rad176">面</h2>
-<h2 id="rad177">革</h2>
-<h2 id="rad178">韋</h2>
-<h2 id="rad179">韭</h2>
-<h2 id="rad180">音</h2>
-<h2 id="rad181">頁</h2>
-<h2 id="rad182">風</h2>
-<h2 id="rad183">飛</h2>
-<h2 id="rad184">食</h2>
-<h2 id="rad185">首</h2>
-<h2 id="rad186">香</h2>
-<h2 id="rad187">馬</h2>
-<h2 id="rad188">骨</h2>
-<h2 id="rad189">高</h2>
-<h2 id="rad190">髟</h2>
-<h2 id="rad191">鬥</h2>
-<h2 id="rad192">鬯</h2>
-<h2 id="rad193">鬲</h2>
-<h2 id="rad194">鬼</h2>
-<h2 id="rad195">魚</h2>
-<h2 id="rad196">鳥</h2>
-<h2 id="rad197">鹵</h2>
-<h2 id="rad198">鹿</h2>
-<h2 id="rad199">麥</h2>
-<h2 id="rad200">麻</h2>
-<h2 id="rad201">黄</h2>
-<h2 id="rad202">黍</h2>
-<h2 id="rad203">黒</h2>
-<h2 id="rad204">黹</h2>
-<h2 id="rad205">黽</h2>
-<h2 id="rad206">鼎</h2>
-<h2 id="rad207">鼓</h2>
-<h2 id="rad208">鼠</h2>
-<h2 id="rad209">鼻</h2>
-<h2 id="rad210">齊</h2>
-<h2 id="rad211">齒</h2>
-<h2 id="rad212">龍</h2>
-<h2 id="rad213">龜</h2>
-<h2 id="rad214">龠</h2>
+
+{% for radical in site.data.glossary %}
+  {% include radical-headwords.html datafile=radical %}
+{% endfor %}
+
 </article>
