Created basic TOC files for Madhyama and Ekottarika, added links to sidebar.

--- a/01_dirgha/contents.html
+++ b/01_dirgha/contents.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 type: default
-title: The Long Agamas | Contents
+title: The Long Discourses | Contents
 base: ../
 ---
 
@@ -9,53 +9,55 @@ base: ../
   <h2>Contents</h2>
   <ul class="toc">
     <li>Introduction</li>
-    <li>Seng Chao's Preface</li>
-    <li>Part I
-      <ol>
-        <li>The Great Origin</li>
-        <li>The Sojourn</li>
-        <li>[Govinda]</li>
-        <li>[Janavasabha]</li>
-      </ol>
-    </li>
-    <li>Part II
-      <ol start="5">
-        <li>Smaller Conditions</li>
-        <li>Cultivation of the Wheel-Turning Holy King</li>
-        <li>[Pāyāsi]</li>
-        <li>Sandānikā</li>
-        <li>The Gathered Assembly</li>
-        <li>Ten Higher</li>
-        <li>Incremental</li>
-        <li>The Three Heaps</li>
-        <li>The Great Dependent Method</li>
-        <li>Sakrodevanamindra's Questions</li>
-        <li>[Anupī]</li>
-        <li>Good Birth</li>
-        <li>Purity</li>
-        <li>Gladness</li>
-        <li>The Great Congregation</li>
-      </ol>
-    </li>
-    <li>Part III
-      <ol start="20">
-        <li>[Ambaṭṭha]</li>
-        <li>Brahma's Motion</li>
-        <li>Planting Virtue</li>
-        <li>[Kūṭadanta]</li>
-        <li>Resolute</li>
-        <li>The Naked Ascetic</li>
-        <li>Three Knowledges</li>
-        <li>Sramana's Fruit</li>
-        <li>[Poṭṭhapāda]</li>
-        <li><a href="DA.29.html">*Lohitya</a></li>
-      </ol>
-    </li>
-    <li>Part IV
-    <ol start="30">
-      <li>Annals of the World</li>
-    </ol>
-    </li>
+    <li>The Long Discourses
+      <ul class="toc">
+        <li>Seng Chao's Preface</li>
+        <li>Part I
+          <ol>
+            <li>The Great Origin</li>
+            <li>The Sojourn</li>
+            <li>[Govinda]</li>
+            <li>[Janavasabha]</li>
+          </ol>
+        </li>
+        <li>Part II
+          <ol start="5">
+            <li>Smaller Conditions</li>
+            <li>Cultivation of the Wheel-Turning Holy King</li>
+            <li>[Pāyāsi]</li>
+            <li>Sandānikā</li>
+            <li>The Gathered Assembly</li>
+            <li>Ten Higher</li>
+            <li>Incremental</li>
+            <li>The Three Heaps</li>
+            <li>The Great Dependent Method</li>
+            <li>Sakrodevanamindra's Questions</li>
+            <li>[Anupī]</li>
+            <li>Good Birth</li>
+            <li>Purity</li>
+            <li>Gladness</li>
+            <li>The Great Congregation</li>
+          </ol>
+        </li>
+        <li>Part III
+          <ol start="20">
+            <li>[Ambaṭṭha]</li>
+            <li>Brahma's Motion</li>
+            <li>Planting Virtue</li>
+            <li>[Kūṭadanta]</li>
+            <li>Resolute</li>
+            <li>The Naked Ascetic</li>
+            <li>Three Knowledges</li>
+            <li>Sramana's Fruit</li>
+            <li>[Poṭṭhapāda]</li>
+            <li><a href="DA.29.html">*Lohitya</a></li>
+          </ol>
+        </li>
+        <li>Part IV
+        <ol start="30">
+          <li>Annals of the World</li>
+        </ol>
+    </li></ul>
     <li>Pali Parallels</li>
     <li>Index</li>
     <li><a href="../X2_glossary/index.html">Glossary</a></li>
