Added html stubs for MA.1 to MA.6 and added links to Madhyama/contents.html for each.

--- a/02_madhyama/contents.html
+++ b/02_madhyama/contents.html
@@ -14,13 +14,13 @@ base: ../
         <ul class="toc">
           <li>Chapter 1: The Sevens
             <ol start="1">
-              <li>The Good Dharma</li>
-              <li>The Parijata Tree</li>
-              <li>The City Parable</li>
-              <li>The Water Parable</li>
-              <li>The Wood Pile Parable</li>
-              <li>The Good Person’s Departure</li>
-              <li>Worldly Merit</li>
+              <li><a href="MA_001.html">The Good Dharma</a></li>
+              <li><a href="MA_002.html">The Pārijāta Tree</a></li>
+              <li><a href="MA_003.html">The City Parable</a></li>
+              <li><a href="MA_004.html">The Water Parable</a></li>
+              <li><a href="MA_005.html">The Wood Pile Parable</a></li>
+              <li><a href="MA_006.html">The Good Person’s Departure</a></li>
+              <li><a href="MA_007.html">Worldly Merit</a></li>
               <li>The Seven Suns</li>
               <li>The Seven Chariots</li>
               <li>The End of Contaminants</li>
