Struggled with creating a centered header and navbar arrangement because ULs are difficult to deal with. I changed the site layout to a left aligned one with the articles max-width 650px and sidebars that are 250px. The result can be reduced to a narrow window before it breaks, which should suffice until I bother to implement a responsive design.

--- a/01_dirgha/contents.html
+++ b/01_dirgha/contents.html
@@ -16,8 +16,8 @@ base: ../
           <ol>
             <li>The Great Origin</li>
             <li>The Sojourn</li>
-            <li>[Govinda]</li>
-            <li>[Janavasabha]</li>
+            <li>Govinda</li>
+            <li>Jinayabha</li>
           </ol>
         </li>
         <li>Part II
@@ -41,16 +41,16 @@ base: ../
         </li>
         <li>Part III
           <ol start="20">
-            <li>[Ambaṭṭha]</li>
+            <li>Ambāṣṭha</li>
             <li>Brahma's Motion</li>
             <li>Planting Virtue</li>
-            <li>[Kūṭadanta]</li>
+            <li>Kūṭatāṇḍya</li>
             <li>Resolute</li>
             <li>The Naked Ascetic</li>
             <li>Three Knowledges</li>
-            <li>Sramana's Fruit</li>
-            <li>[Poṭṭhapāda]</li>
-            <li><a href="DA.29.html">*Lohitya</a></li>
+            <li>The Mendicant's Fruits</li>
+            <li>Pṛṣṭhapāla</li>
+            <li><a href="DA_29.html">Lohitya</a></li>
           </ol>
         </li>
         <li>Part IV
