Finished rewriting the contents.html file for the Medium Discourses and moved the TOC data to a yaml file for future use.

--- a/01_dirgha/DA_29.html
+++ b/01_dirgha/DA_29.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Long Agamas | 29. Lohitya
+title: The Long Discourses | 29. Lohitya
 type: translation
 en: DA_29_en_Lohitya
 ch: DA_29_ch_Lohitya
