--- a/02_madhyama/contents.html
+++ b/02_madhyama/contents.html
@@ -1,69 +1,25 @@
 ---
 layout: default
 type: default
-title: The Middle-Length Discourses | Contents
+title: The Medium Discourses | Contents
 base: ../
 ---
-<article>
-  <h2>Contents</h2>
-  <ul class="toc">
-    <li>Introduction</li>
-    <li>The Middle-Length Discourses</li>
-    <ul class="toc">
-      <li>First Day Recitation
-        <ul class="toc">
-          <li>Chapter 1: The Sevens
-            <ol start="1">
-              <li><a href="MA_001.html">The Good Dharma</a></li>
-              <li><a href="MA_002.html">The Pārijāta Tree</a></li>
-              <li><a href="MA_003.html">The City Parable</a></li>
-              <li><a href="MA_004.html">The Water Parable</a></li>
-              <li><a href="MA_005.html">The Wood Pile Parable</a></li>
-              <li><a href="MA_006.html">The Good Person’s Departure</a></li>
-              <li><a href="MA_007.html">Worldly Merit</a></li>
-              <li>The Seven Suns</li>
-              <li>The Seven Chariots</li>
-              <li>The End of Contaminants</li>
-            </ol>
-          </li>
-          <li>Chapter 2: Related to Actions</li>
-          <li>Chapter 3: Related to Sariputra</li>
-          <li>Chapter 4: Unprecedented Things</li>
-          <li>Chapter 5: Related to Training</li>
-          <li>Chapter 6a: Related to Kings</li>
-        </ul>
-      </li>
-      <li>Second Day Recitation: Minor Lands and Cities
-        <ul class="toc">
-          <li>Chapter 6b: Related to Kings</li>
-          <li>Chapter 7: The King of Long Life</li>
-          <li>Chapter 8: Defilement</li>
-          <li>Chapter 9: Causation</li>
-          <li>Chapter 10: Forests</li>
-        </ul>
-      </li>
-      <li>Third Day Recitation: Mindfulness
-        <ul class="toc">
-          <li>Chapter 11: The Greats (1)</li>
-          <li>Chapter 12a: The Brahmins</li>
-        </ul>
-      </li>
-      <li>Fourth Day Recitation: Discernment
-        <ul class="toc">
-          <li>Chapter 12b: The Brahmins</li>
-          <li>Chapter 13: Root Discernments</li>
-          <li>Chapter 14: Mind</li>
-          <li>Chapter 15a: The Pairs</li>
-        </ul>
-      </li>
-      <li>Fifth Day Recitation: The Last
-        <ul class="toc">
-          <li>Chapter 15b: The Pairs</li>
-          <li>Chapter 16: The Greats (2)</li>
-          <li>Chapter 17: Potaliya[2]</li>
-          <li>Chapter 18: Illustrations</li>
-        </ul>
-      </li>
-      <li>Afterword</li>
-  </ul>
+<article class="home">
+    <h1>The Medium Discourses</h1>
+    <h4>(Skt. Madhyama Āgama; Ch. <span class="ch">中阿含經</span>)</h4>
+    <hr/>
+    <h2>MA 1: <a href="MA_001.html">The Good Dharma</a> <span class="refs">(AN 7.68: <a href="https://suttacentral.net/an7.68" target="_blank">One Who Knows the Teachings</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0421" target="_blank">T 26.421a12</a>]</span></h2>
+    <p>The Buddha explains seven things that a monk should know in order to attain liberation: the teachings, their meaning, time, moderation, himself, assemblies, and what's superior among people.</p>
+    <h2>MA 2: <a href="MA_002.html">The Pārijāta Tree</a> <span class="refs">(AN 7.69: <a href="https://suttacentral.net/an7.69" target="_blank">The Shady Orchid Tree</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0422" target="_blank">T 26.422a18</a>]</span></h2>
+    <p>The Buddha relates the seasonal cycle of the mythical pārijāta tree in the Trāyastriṃśa Heaven and compares it to a monk's progress towards liberation.</p>
+    <h2>MA 3: <a href="MA_003.html">The City Parable</a> <span class="refs">(AN 7.67: <a href="https://suttacentral.net/an7.67" target="_blank">The Simile of the Citadel</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0422" target="_blank">T 26.422c09</a>]</span></h2>
+    <p>The Buddha employs an analogy of a border city's defenses and supplies to describe the qualities and meditative abilities that lead a disciple to liberation.</p>
+    <h2>MA 4: <a href="MA_004.html">The Water Parable</a> <span class="refs">(AN 7.15: <a href="https://suttacentral.net/an7.15" target="_blank">A Simile With Water</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0424" target="_blank">T 26.424a13</a>]</span></h2>
+    <p>The Buddha reinterprets a common simile of a person who progressively gets a footing in a river and wades to shore. He relates it to the way a disciple overcomes spiritual obstacles and progresses to liberation.</p>
+    <h2>MA 5: <a href="MA_005.html">The Wood Pile Parable</a> <span class="refs">(AN 7.72: <a href="https://suttacentral.net/an7.72" target="_blank">The Simile of the Bonfire</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0425" target="_blank">T 26.425a15</a>]</span></h2>
+    <p>The Buddha warns a group of newly ordained monks about the dangers of giving into short-term pleasures that will lead to their downfall. He uses a series of descriptions of the punishments suffered in hell to drive home the point that what that seems pleasant can lead to torment in the future if one is not careful.</p>
+    <h2>MA 6: <a href="MA_006.html">The Good Person’s Departure</a> <span class="refs">(AN 7.55: <a href="https://suttacentral.net/an7.15" target="_blank">Places People Are Reborn</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0427" target="_blank">T&nbsp;26.427a13</a>]</span></h2>
+    <p>The Buddha gives a series of cryptic descriptions of seven ways a non-returner disciple eventually attains liberation after leaving this world.</p>
+    <h2>MA 7: <a href="MA_007.html">Worldly Merit</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv01p0427" target="_blank">T&nbsp;26.427c25</a>]</span></h2>
+    <p>The Buddha describes the worldly and transcendent merits that can be cultivated by the faithful. The worldly merits come from giving material support and service to the monasteries. The transcendent merits come from seeking to learn the teachings and accepting the precepts.</p>
 </article>
