--- a/02_madhyama/MA_001.html
+++ b/02_madhyama/MA_001.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Middle-Length Discourses | 1. The Good Dharma
+title: The Medium Discourses | 1. The Good Dharma
 type: translation
 en: MA_001_en_Good_Dharma
 ch: MA_001_ch_Good_Dharma
