MA 3-7 and the html stubs have been updated so they render properly.

--- a/02_madhyama/MA_003.html
+++ b/02_madhyama/MA_003.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Middle-Length Discourses | 3. The City Parable
+title: The Medium Discourses | 3. The City Parable
 type: translation
 en: MA_003_en_City_Parable
 ch: MA_003_ch_City_Parable
