--- a/02_madhyama/MA_004.html
+++ b/02_madhyama/MA_004.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Middle-Length Discourses | 4. The Water Parable
+title: The Medium Discourses | 4. The Water Parable
 type: translation
 en: MA_004_en_Water_Parable
 ch: MA_004_ch_Water_Parable
