--- a/02_madhyama/MA_005.html
+++ b/02_madhyama/MA_005.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Middle-Length Discourses | 5. The Wood Pile Parable
+title: The Medium Discourses | 5. The Wood Pile Parable
 type: translation
 en: MA_005_en_Wood_Pile_Parable
 ch: MA_005_ch_Wood_Pile_Parable
