--- a/02_madhyama/MA_006.html
+++ b/02_madhyama/MA_006.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Middle-Length Discourses | 6. The Good Person's Departure
+title: The Medium Discourses | 6. The Good Person's Departure
 type: translation
 en: MA_006_en_Good_Persons_Departure
 ch: MA_006_ch_Good_Persons_Departure
