--- a/02_madhyama/MA_007.html
+++ b/02_madhyama/MA_007.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Middle-Length Discourses | 7. Worldly Merit
+title: The Medium Discourses | 7. Worldly Merit
 type: translation
 en: MA_007_en_Worldly_Merit
 ch: MA_007_ch_Worldly_Merit
