--- a/02_madhyama/MA_002.html
+++ b/02_madhyama/MA_002.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Middle-Length Discourses | 2. The Pārijāta Tree
+title: The Medium Discourses | 2. The Pārijāta Tree
 type: translation
 en: MA_002_en_Parijata_Tree
 ch: MA_002_ch_Parijata_Tree
