Updated the static page and collection contents files to the new centered style and eliminated a bunch of styles not needed now.

--- a/translations.html
+++ b/translations.html
@@ -3,7 +3,7 @@ layout: default
 type: home
 title: Dharma Pearls | Translations
 ---
-<article class="home">
+<article>
   <h1>The Current Translation Projects</h1>
   <p>The first long-term goal of <em>Dharma Pearls</em> is to produce English translations of the four Chinese Āgama collections and select minor texts like the Chinese Dharmapāda.</p>
   <p>The list of texts currently slated for translation include:</p>
