--- a/translations.html
+++ b/translations.html
@@ -4,9 +4,9 @@ type: home
 title: Dharma Pearls | Translations
 ---
 <article>
-  <h1>The Current Translation Projects</h1>
-  <p>The first long-term goal of <em>Dharma Pearls</em> is to produce English translations of the four Chinese Āgama collections and select minor texts like the Chinese Dharmapāda.</p>
-  <p>The list of texts currently slated for translation include:</p>
+  <h1>Current Translation Projects</h1>
+  <p>The first long-term goal of <em>Dharma Pearls</em> is to produce English translations of the four Chinese Āgama collections and select early Buddhist texts like the Chinese Dharmapāda from the <em>Taisho</em> canon.</p>
+  <p>The list of texts currently slated for translation includes:</p>
   <ul>
     <li><a class="title" href="01_dirgha/contents.html">The Long Discourses</a> (Skt. <em>Dīrgha-āgama</em>)</li>
     <li><a class="title" href="02_madhyama/contents.html">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>)</li>
