Added the date to the first release.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,7 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <ul style="list-style-type:none; text-indent:-90px; margin-left: 50px">
-  <li>nn-XXX-2019: The first "official" update released. Aside from an improved web design, it includes translations of Sutra 29 of the Long Discourses and Sutras 1-7 of the Medium Discourses.</li>
+  <li>11-OCT-2019: The first "official" update released. Aside from an improved web design, it includes translations of Sutra 29 of the Long Discourses and Sutras 1-7 of the Medium Discourses.</li>
   <li>15-SEP-2009: The <em>Dharma Pearls</em> repo on Github goes public and is published on Guthub Pages. This was a broken web design. The release was simply to walk-through the Github Pages deployment process.</li>
 <ul>
 </article>
