--- a/translations.html
+++ b/translations.html
@@ -10,7 +10,7 @@ title: Dharma Pearls | Translations
   <ul>
     <li><a class="title" href="01_dirgha/contents.html">The Long Discourses</a> (Skt. <em>Dīrgha-āgama</em>)</li>
     <li><a class="title" href="02_madhyama/contents.html">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>)</li>
-    <li><strong>The Related Discourses</strong> (Skt. <em>Samyukta-āgama</em>)</li>
+    <li><a class="title" href="03_samyukta/contents.html">The Related Discourses</a> (Skt. <em>Samyukta-āgama</em>)</li>
     <li><strong>The Numerical Discourses</strong> (Skt. <em>Ekottarika-āgama</em>)</li>
     <li><strong>Past Events</strong> (Skt. <em>Itivṛttaka</em>)</li>
     <li><strong>Dharma Verses</strong> (Skt. <em>Dharmapāda</em>)</li>
