--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,8 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <ul style="list-style-type:none; text-indent:-90px; margin-left: 50px">
-  <li>11-OCT-2019: The first "official" update released. Aside from an improved web design, it includes translations of Sutra 29 of the Long Discourses and Sutras 1-7 of the Medium Discourses.</li>
+  <li>14-OCT-2019: Sutras 748-754 and 758-761 have been added to the <a class="title" href="03_samyukta\contents.html">Related Discourses</a>.</li>
+  <li>11-OCT-2019: The first "official" update released. Aside from an improved web design, it includes translations of Sutra 29 of the <a class="title" href="01_dirgha\contents.html">Long Discourses</a> and Sutras 1-7 of the <a class="title" href="02_madhyama\contents.html">Medium Discourses</a>.</li>
   <li>15-SEP-2009: The <em>Dharma Pearls</em> repo on Github goes public and is published on Guthub Pages. This was a broken web design. The release was simply to walk-through the Github Pages deployment process.</li>
 <ul>
 </article>
