Changed presentation of SA to include new table of contents based on Yinshun's reconstruction. From now on, SA has subfolders for each samyukta. Also began inputting new segmented data format with SA sutras in SA 1, but template will need to be altered to read it.

--- a/03_samyukta/SA_13/SA_750.html
+++ b/03_samyukta/SA_13/SA_750.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 750. The Roots of Good and Bad
 type: translation
 en: SA_f28_748-796_en
 number: 750
-base: ../
+base: ../../
 ---
