--- a/03_samyukta/SA_13/SA_751.html
+++ b/03_samyukta/SA_13/SA_751.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 751. The Right Undertaking
 type: translation
 en: SA_f28_748-796_en
 number: 751
-base: ../
+base: ../../
 ---
