--- a/03_samyukta/SA_13/SA_759.html
+++ b/03_samyukta/SA_13/SA_759.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 759. Three Sensations
 type: translation
 en: SA_f28_748-796_en
 number: 759
-base: ../
+base: ../../
 ---
