--- a/03_samyukta/SA_13/SA_760.html
+++ b/03_samyukta/SA_13/SA_760.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 760. Three Disagreeable Things
 type: translation
 en: SA_f28_748-796_en
 number: 760
-base: ../
+base: ../../
 ---
