--- a/03_samyukta/contents.html
+++ b/03_samyukta/contents.html
@@ -7,58 +7,72 @@ base: ../
 <article class="home">
     <h1>The Related Discourses</h1>
     <h4>(Skt. Saṃyukta Āgama; Ch. <span class="ch">雜阿含經</span>)</h4>
-    <p><em>The Related Disources</em> was translated to Chinese by Guṇabhadra  and Baoyun sometime between 435-443 CE. The text as it has survived in the <em>Taisho Daizokyo</em> consists of 1,362 individually numbered sutras, although the numbering of abbreviated sutras is inconsistent (i.e., if they are all counted, the number is larger). The text spans 50 fascicles and 373 pages of <em>Taisho</em> volume 2.</p>
-    <p>The Pali equivalent is the <em>Saṃyutta Nikāya</em> (<em>SN</em>), and the two collections do overlap extensively. Unlike its Pali counterpart, however, <em>the Related Discourses</em> lacks explicit subdivisions. Indeed, the original Chinese text lacked subdivisions, sutra titles, or even numbers. Nonetheless, careful reading and comparisons to the Pali show that it did consist of thematically arranged groups of sutras, similar to <em>SN</em> but in a different arrangement.</p>
-    <p>Below is a list of the English translations currently available with brief synopses of their contents. Pali equivalents are listed in () and the sourcetext is indicated in [].</p>
-    <p>Note: All titles for <em>SA</em> sutras are supplied by the translator as an aid for the reader. They are not in the original Chinese. The sutras are numbered according to the <em>Taisho</em>, adding letters (e.g. 800a) when numbering abbreviated sutras the <em>Taisho</em> skipped.</p>
+    <p><em>The Related Discources</em> was translated to Chinese by Guṇabhadra  and Baoyun sometime between 435-443 CE. The text as it has survived in the <em>Taisho Daizokyo</em> consists of 1,362 individually numbered sutras, although the abbreviated sutras were largely left unnumbered. The text spans 50 fascicles and 373 pages of <em>Taisho</em> volume 2.</p>
+    <p>The divisions and groups of sutras listed below are based on a reconstruction by Chinese scholar and Dharma teacher Ven. Yinshun. The sutra titles are my own, chosen simply to represent the topics they address. I’ve also taken the liberty to reconstitute the abbreviated sutras rather than reproduce the summary descriptions found in the original Chinese.</p>
+    <p>The Pali equivalent is the <em>Saṃyutta Nikāya</em> (<em>SN</em>), and the two collections do overlap extensively. Like <em>SN</em>, the <em>Related Discourses</em> consists of several parts (<em>varga</em>) that consist of one or more thematically related groups (<em>saṃyukta</em>) of sutras. I’ve listed Pali sutta groups in parentheses when they parallel a Chinese sutra group closely.</p>
     <hr/>
+    <h2 class="center">Part I: The Five Aggregates</h2>
+      <h3>1. The Aggregates</h3>
 
-    <h3>The Path <span class="refs">(cf. <em>SN</em> 45: Maggasaṃyutta)</span></h3>
+    <h2 class="center">Part II: The Six Sense Bases</h2>
+      <h3>2. The Sense Bases</h3>
 
-    <h2>SA 748: <a href="SA_748.html">The First Sign</a> <span class="refs">(SN 45.55: <a href="https://suttacentral.net/sn45.55" target="_blank">Accomplishment in Proper Attention (1st) </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b5</a>]</span></h2>
-    <p>Right view is the first sign of liberation like the first light of dawn is the first sign of sunrise.</p>
+    <h2 class="center">Part III: Causation</h2>
+      <h3>3. Causation</h3>
+      <h3>4. The Truths</h3>
+      <h3>5. The Elements</h3>
+      <h3>6. Feeling</h3>
 
-    <h2>SA 749: <a href="SA_749.html">Forerunners</a> <span class="refs">(<em>SN</em> 45.1: <a href="https://suttacentral.net/sn45.1" target="_blank">Ignorance</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b14</a>]</span></h2>
-    <p>When producing insight is the forerunner, good things, conscience, right view, and the eightfold path lead to liberation.</p>
+    <h2 class="center">Part IV: The Path</h2>
+      <h3>7. The Abodes of Mindfulness</h3>
+      <h3>8. Right Effort (lost)</h3>
+	    <h3>9. Miraculous Powers (lost)</h3>
+	    <h3>10. Faculties</h3>
+	    <h3>11. Powers</h3>
+	    <h3>12. Factors of Awakening</h3>
+      <h3>13. <a class="title" href="SA_13/contents.html">The Factors of the Noble Path</a> <span class="refs">(cf. <em>SN</em> 45: Maggasaṃyutta)</span></h3>
+      <h3>14. Mindfulness of Breathing</h3>
+      <h3>15. The Learner</h3>
+      <h3>16. Unbroken Faith</h3>
 
-    <h2>SA 750: <a href="SA_750.html">The Roots of Good and Evil</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b26</a>]</span></h2>
-    <p>The root of all evil is ignorance, and the root of all good is insight.</p>
+    <h2 class="center">Part V: The Eight Assemblies</h2>
+      <h3>17. Monks</h3>
+    	<h3>18. Māra</h3>
+    	<h3>19. Śakra</h3>
+    	<h3>20. Aristocrats</h3>
+    	<h3>21. Priests</h3>
+    	<h3>22. Brahma</h3>
+    	<h3>23. Nuns</h3>
+    	<h3>24. Vaṇgīsa </h3>
+    	<h3>25. Lesser Gods</h3>
+    	<h3>26. Yakṣa</h3>
+    	<h3>27. Forests</h3>
 
-    <h2>SA 751: <a href="SA_751.html">The Right Undertaking</a> <span class="refs">(SN 45.24: <a href="https://suttacentral.net/sn45.24" target="_blank">Practice (2nd)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198c14</a>]</span></h2>
-    <p>Following the eightfold path is the correct undertaking for lay and renunciant practitioners.</p>
+    <h2 class="center">Part VI: The Teachings by Disciples</h2>
+      <h3>28. Śāriputra</h3>
+    	<h3>29. Maudgalyāyana</h3>
+    	<h3>30. Aniruddha</h3>
+    	<h3>31. Mahākātyāyana</h3>
+    	<h3>32. Ānanda</h3>
+    	<h3>33. Citrā</h3>
 
-    <h2>SA 752: <a href="SA_752.html">Desire</a> <span class="refs">(SN 45.30: <a href="https://suttacentral.net/sn45.30" target="_blank">With Uttiya</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198c27</a>]</span></h2>
-    <p>Desire is not the object but the craving of desiring things. The eightfold path is the way to ending it.</p>
-
-    <h2>SA 753: <a href="SA_753.html">Deathlessness</a> <span class="refs">(SN 45.7: <a href="https://suttacentral.net/sn45.7" target="_blank">A Mendicant (2nd)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a13</a>]</span></h2>
-    <p>The Buddha explains that the deathless in his teaching is the end of the contaminants that lead to rebirth.</p>
-
-    <h2>SA 754: <a href="SA_754.html">Requirements of Concentration</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a22</a>]</span></h2>
-    <p>The Buddha explains that the first seven parts of the eightfold path are the root and requirements of right concentration.</p>
-
-    <!-- These sutras are abbreviated with a summary in source
-          Reconstruct them in the future
-    <h2>SA 755: <a href="">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h2>
-    <p></p>
-
-    <h2>SA 756: <a href="">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h2>
-    <p></p>
-
-    <h2>SA 757: <a href="">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h2>
-    <p></p>
-    -->
-
-    <h2>SA 758: <a href="SA_758.html">The Fear of Losing Mother or Son</a> <span class="refs">(AN 3.62: <a href="https://suttacentral.net/an3.62" target="_blank">Perils </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b5</a>]</span></h2>
-    <p>The Buddha describes three common fears of losing one’s mother or son during disasters, but he says those fears really come from sickness, old age, and death. The way to escaping these fears is the eightfold path.</p>
-
-    <h2>SA 759: <a href="SA_759.html">Three Sensations</a> <span class="refs">(SN 45.29: <a href="https://suttacentral.net/sn45.29" target="_blank">Feeling</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c17</a>]</span></h2>
-    <p>The eightfold path is the way to end the three sensations.</p>
-
-    <h2>SA 760: <a href="SA_760.html">Three Disagreeable Things</a> <span class="refs">(AN 10.76: <a href="https://suttacentral.net/an10.76" target="_blank">Three Things</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c27</a>]</span></h2>
-    <p>The eightfold path is the way to end old age, illness, and death.</p>
-
-    <h2>SA 761: <a href="SA_761.html">Learners and Non-Learners</a> <span class="refs">(SN 45.13: <a href="https://suttacentral.net/sn45.13" target="_blank">A Trainee</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a14</a>]</span></h2>
-    <p>The terms "learner" and "non-learner" refer to disciples who are learning or have finished learning the eightfold path.</p>
-
-    <!-- Reconstruct 761a from description at end of 761 -->
+    <h2 class="center">Part VII: The Teachings by the Tathāgata</h2>
+      <h3>34. Radha<h3>
+    	<h3>35. Views<h3>
+    	<h3>36. Ending<h3>
+    	<h3>37. Heaven<h3>
+    	<h3>38. Realization<h3>
+    	<h3>39. Sense Bases, Elements, and Aggregates<h3>
+    	<h3>40. Unbroken Faith<h3>
+    	<h3>41. Mahākāśyapa<h3>
+    	<h3>42. Village Leaders<h3>
+    	<h3>43. Horses<h3>
+    	<h3>44. Mahānāman<h3>
+    	<h3>45. Beginningless<h3>
+    	<h3>46. Vatsagotra<h3>
+    	<h3>47. Heretics and Wanderers<h3>
+    	<h3>48. Defilements<h3>
+    	<h3>49. Parables<h3>
+    	<h3>50. Illness<h3>
+    	<h3>51. Fruits of Deeds<h3>
 </article>
