--- a/03_samyukta/SA_13/SA_748.html
+++ b/03_samyukta/SA_13/SA_748.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 748. The First Sign
 type: translation
 en: SA_f28_748-796_en
 number: 748
-base: ../
+base: ../../
 ---
