--- a/03_samyukta/SA_13/SA_749.html
+++ b/03_samyukta/SA_13/SA_749.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 749. Forerunners
 type: translation
 en: SA_f28_748-796_en
 number: 749
-base: ../
+base: ../../
 ---
