--- a/03_samyukta/SA_13/SA_753.html
+++ b/03_samyukta/SA_13/SA_753.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 753. Deathlessness
 type: translation
 en: SA_f28_748-796_en
 number: 753
-base: ../
+base: ../../
 ---
