--- a/03_samyukta/SA_13/SA_754.html
+++ b/03_samyukta/SA_13/SA_754.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 754. Requirements of Concentration
 type: translation
 en: SA_f28_748-796_en
 number: 754
-base: ../
+base: ../../
 ---
