--- a/03_samyukta/SA_13/SA_758.html
+++ b/03_samyukta/SA_13/SA_758.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 758. The Fear of Losing Mother or Son
 type: translation
 en: SA_f28_748-796_en
 number: 758
-base: ../
+base: ../../
 ---
