--- a/03_samyukta/SA_13/SA_761.html
+++ b/03_samyukta/SA_13/SA_761.html
@@ -4,5 +4,5 @@ title: The Related Discourses | 761. Learners and Non-Learners
 type: translation
 en: SA_f28_748-796_en
 number: 761
-base: ../
+base: ../../
 ---
