--- a/03_samyukta/SA_01/contents.html
+++ b/03_samyukta/SA_01/contents.html
@@ -1,23 +1,20 @@
 ---
 layout: default
 type: default
-title: 'The Related Discourses | 13. The Factors of the Noble Path | Contents'
+title: 'The Related Discourses | 1. The Aggregates | Contents'
 base: ../../
 ---
 <article class="home">
     <h1><a href="../contents.html">The Related Discourses</a></h1>
-    <h2>13. The Factors of the Noble Path <span class="refs">(cf. <em>SN</em> 45: Maggasaṃyutta)</span></h2>
-    <p>This group of sutras has the common theme of describing the eight factors of the noble path, which in English is commonly called the eightfold path. These factors are right view, right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration. These eight factors serve as a guide to the Buddhist practice, and the eightfold path is the definition of the fourth noble truth.</p>
-    <p>This group consists of 46 full sutras plus 68 abbreviated sutra variants. Below is a list of the English translations currently available with brief synopses of their contents. Pali equivalents are listed in () and the sourcetext is indicated in [].</p>
+    <h2>1. The Aggregates <span class="refs">(cf. <em>SN</em> 22: Khadhasaṃyutta)</span></h2>
+    <p>This group of sutras has the common theme of describing the five aggregates, and how they relate to the Buddhist practice. These aggregates are form, feeling, perception, intention, and consciousness. The five aggregates represent the things that people can identify with as a self. When they come together, they form sentient beings, which in Buddhist thought includes animals, humans, and other beings like spirits, demons, and gods. </p>
+    <p>This group consists of 110 full sutras plus 68 abbreviated sutra variants for a total of 178 sutras. Below is a list of the English translations currently available with brief synopses of their contents. Pali equivalents are listed in () and the sourcetext is indicated in [].</p>
     <p>Note: All titles for <em>SA</em> sutras are supplied by the translator as an aid for the reader.</p>
     <hr/>
+    <h3>1. <a href="SA1_1.html">Impermanence</a> <span class="refs">(SN <a href="https://suttacentral.net/sn22.12" target="_blank">22.12</a>, <a href="https://suttacentral.net/sn22.51" target="_blank">22.51</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T 99.1a6</a>]</span></h3>
+    <p class="synopsis">When right contemplated, form is recognized to be impermanent, and so are feeling, perception, and consciousness. That contemplation leads to disillusionment and dispassion, which lead to liberation.</p>
 
-
-
-    <h3>1. <a href="SA_748.html">The First Sign</a> <span class="refs">(SN 45.55: <a href="https://suttacentral.net/sn45.55" target="_blank">Accomplishment in Proper Attention (1st) </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b5</a>]</span></h3>
-    <p class="synopsis">Right view is the first sign of liberation like the first light of dawn is the first sign of sunrise.</p>
-
-    <h3>2. <a href="SA_749.html">Forerunners</a> <span class="refs">(<em>SN</em> 45.1: <a href="https://suttacentral.net/sn45.1" target="_blank">Ignorance</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b14</a>]</span></h3>
+    <!--<h3>2. <a href="SA_749.html">Forerunners</a> <span class="refs">(<em>SN</em> 45.1: <a href="https://suttacentral.net/sn45.1" target="_blank">Ignorance</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b14</a>]</span></h3>
     <p class="synopsis">When producing insight is the forerunner, good things, conscience, right view, and the eightfold path lead to liberation.</p>
 
     <h3>3. <a href="SA_750.html">The Roots of Good and Evil</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b26</a>]</span></h3>
@@ -45,7 +42,7 @@ base: ../../
 
     <h3>10. <a href="">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h3>
     <p class="synopsis"></p>
-    -->
+
 
     <h3>11. <a href="SA_758.html">The Fear of Losing Mother or Son</a> <span class="refs">(AN 3.62: <a href="https://suttacentral.net/an3.62" target="_blank">Perils </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b5</a>]</span></h3>
     <p class="synopsis">The Buddha describes three common fears of losing one’s mother or son during disasters, but he says those fears really come from sickness, old age, and death. The way to escaping these fears is the eightfold path.</p>
@@ -59,5 +56,5 @@ base: ../../
     <h3>14. <a href="SA_761.html">Learners and Non-Learners</a> <span class="refs">(SN 45.13: <a href="https://suttacentral.net/sn45.13" target="_blank">A Trainee</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a14</a>]</span></h3>
     <p class="synopsis">The terms “learner” and “non-learner” refer to disciples who are learning or have finished learning the eightfold path.</p>
 
-    <!-- Reconstruct 761a from description at end of 761 -->
+     Reconstruct 761a from description at end of 761 -->
 </article>
