Added and published SA 1.2-4.

--- a/03_samyukta/SA_01/SA1_1.html
+++ b/03_samyukta/SA_01/SA1_1.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 1. Impermanence'
+title: 'The Related Discourses | 1. The Aggregates | 1. Impermanent'
 type: translation
 en: SA_1_1_en
 base: ../../
