Added SA1.5-10. Added navigation to the bottom of SA sutras chaining them together. Automated the page titles for translations (pulled from data files now).

--- a/03_samyukta/SA_01/SA1_1.html
+++ b/03_samyukta/SA_01/SA1_1.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 1. Impermanent'
 type: translation
 en: SA_1_1_en
 base: ../../
+previous: contents.html
+next: SA1_2.html
 ---
