--- a/03_samyukta/SA_01/SA1_3.html
+++ b/03_samyukta/SA_01/SA1_3.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 3. Empty'
 type: translation
 en: SA_1_3_en
 base: ../../
+previous: SA1_2.html
+next: SA1_4.html
 ---
