--- a/03_samyukta/SA_01/SA1_4.html
+++ b/03_samyukta/SA_01/SA1_4.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 4. Not Self'
 type: translation
 en: SA_1_4_en
 base: ../../
+previous: SA1_3.html
+next: SA1_5.html
 ---
