--- a/03_samyukta/SA_01/SA1_2.html
+++ b/03_samyukta/SA_01/SA1_2.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 2. Painful'
 type: translation
 en: SA_1_2_en
 base: ../../
+previous: SA1_1.html
+next: SA1_3.html
 ---
