--- a/03_samyukta/SA_01/contents.html
+++ b/03_samyukta/SA_01/contents.html
@@ -7,51 +7,48 @@ base: ../../
 <article class="home">
     <h1><a href="../contents.html">The Related Discourses</a></h1>
     <h2>1. The Aggregates <span class="refs">(cf. <em>SN</em> 22: Khadhasaṃyutta)</span></h2>
-    <p>This group of sutras has the common theme of describing the five aggregates, and how they relate to the Buddhist practice. These aggregates are form, feeling, perception, intention, and consciousness. The five aggregates represent the things that people can identify with as a self. When they come together, they form sentient beings, which in Buddhist thought includes animals, humans, and other beings like spirits, demons, and gods. </p>
-    <p>This group consists of 110 full sutras plus 68 abbreviated sutra variants for a total of 178 sutras. Below is a list of the English translations currently available with brief synopses of their contents. Pali equivalents are listed in () and the sourcetext is indicated in [].</p>
+    <p>This group of sutras has the common theme of describing the five aggregates and how they relate to Buddhist practice. These aggregates are form, feeling, perception, intention, and consciousness. The five aggregates represent the things that people can identify with as a self, and they are the basic constituents of everyday experience. When they come together, they form sentient beings, which in Buddhist thought includes animals, humans, and other beings like spirits, demons, and gods. </p>
+    <p>The Aggregates group consists of 110 full sutras plus 68 abbreviated sutra variants for a total of 178 sutras. Below is a list of the English translations currently available with brief synopses of their contents.</p> <p>Pali equivalents are listed in () and the sourcetext is indicated in [].</p>
     <p>Note: All titles for <em>SA</em> sutras are supplied by the translator as an aid for the reader.</p>
     <hr/>
     <h3>1. <a href="SA1_1.html">Impermanent</a> <span class="refs">(SN <a href="https://suttacentral.net/sn22.12" target="_blank">22.12</a>, <a href="https://suttacentral.net/sn22.51" target="_blank">22.51</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T 99.1a6</a>]</span></h3>
-    <p class="synopsis">When rightly contemplated, form is recognized to be impermanent, and so are feeling, perception, intention, and consciousness. That contemplation leads to disillusionment and dispassion, which lead to liberation.</p>
+    <p class="synopsis">When rightly contemplated, the aggregates are recognized to be impermanent. That contemplation leads to disillusionment and dispassion, which then lead to liberation.</p>
 
     <h3>2. <a href="SA1_2.html">Painful</a> <span class="refs">(SN <a href="https://suttacentral.net/sn22.13" target="_blank">22.13</a>, <a href="https://suttacentral.net/sn22.51" target="_blank">22.51</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T 99.1a14</a>]</span></h3>
-    <p class="synopsis">When rightly contemplated, form is recognized to be painful, and so are feeling, perception, intention, and consciousness. That contemplation leads to disillusionment and dispassion, which lead to liberation.</p>
+    <p class="synopsis">When rightly contemplated, the aggregates are recognized to be painful. That contemplation leads to disillusionment and dispassion, which then lead to liberation.</p>
 
-    <h3>3. <a href="SA1_3.html">Empty</a> <span class="refs">(SN <a href="https://suttacentral.net/sn22.51" target="_blank">22.51</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T 99.1a14</a>]</span></h3>
-    <p class="synopsis">When rightly contemplated, form is recognized to be empty, and so are feeling, perception, intention, and consciousness. That contemplation leads to disillusionment and dispassion, which lead to liberation.</p>
+    <h3>3. <a href="SA1_3.html">Empty</a> <span class="refs">(SN 22.51:<a href="https://suttacentral.net/sn22.51" target="_blank">The End of Relishing</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T 99.1a14</a>]</span></h3>
+    <p class="synopsis">When rightly contemplated, the aggregates are recognized to be empty. That contemplation leads to disillusionment and dispassion, which then lead to liberation.</p>
 
     <h3>4. <a href="SA1_4.html">Not Self</a> <span class="refs">(SN <a href="https://suttacentral.net/sn22.14" target="_blank">22.14</a>, <a href="https://suttacentral.net/sn22.51" target="_blank">22.51</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T 99.1a14</a>]</span></h3>
-    <p class="synopsis">When rightly contemplated, form is recognized to be not self, and so are feeling, perception, intention, and consciousness. That contemplation leads to disillusionment and dispassion, which lead to liberation.</p>
+    <p class="synopsis">When rightly contemplated, the aggregates are recognized to be not self. That contemplation leads to disillusionment and dispassion, which then lead to liberation.</p>
 
-    <!--<h3>5. <a href="SA_752.html">Desire</a> <span class="refs">(SN 45.30: <a href="https://suttacentral.net/sn45.30" target="_blank">With Uttiya</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198c27</a>]</span></h3>
-    <p class="synopsis">Desire is not the thing desired but the craving of it. The eightfold path is the way to ending this problem.</p>
+    <h3>5. <a href="SA1_5.html">Rightly Considered</a> <span class="refs">(SN 22.52: <a href="https://suttacentral.net/sn22.52" target="_blank">End of Relishing (2)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T 99.1a15</a>]</span></h3>
+    <p class="synopsis">When the aggregates are properly considered and known as they really are to be impermanent, the practitioner can abandon desire and greed for them. Doing so leads to liberation.</p>
 
-    <h3>6. <a href="SA_753.html">Deathlessness</a> <span class="refs">(SN 45.7: <a href="https://suttacentral.net/sn45.7" target="_blank">A Mendicant (2nd)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a13</a>]</span></h3>
-    <p class="synopsis">The Buddha explains that the deathless in his teaching is the end of the contaminants that lead to rebirth.</p>
+    <h3>6. <a href="SA1_6.html">Not Knowing</a> <span class="refs">(SN 22.24: <a href="https://suttacentral.net/sn22.24" target="_blank">Directly Knowing</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T&nbsp;99.1a28</a>]</span></h3>
+    <p class="synopsis">Knowing and abandoning desire for the aggregates, one is able to end suffering.</p>
 
-    <h3>7. <a href="SA_754.html">Roots and Requirements</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a22</a>]</span></h3>
-    <p class="synopsis">The Buddha explains that the first seven parts of the eightfold path are the roots and requirements of right concentration.</p>
+    <h3>7. <a href="SA1_7.html">Not Knowing (2)</a> <span class="refs">(SN 22.24: <a href="https://suttacentral.net/sn22.24" target="_blank">Directly Knowing</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T&nbsp;99.1b6</a>]</span></h3>
+    <p class="synopsis">Knowing and abandoning desire for the aggregates, one’s mind can be liberated and transcend the fear of birth, old age, illness, and death.</p>
 
-    <!-- These sutras are abbreviated with a summary in source
-          Reconstruct them in the future
-    <h3>8. <a href="">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h3>
-    <p class="synopsis"></p>
+    <h3>8. <a href="SA1_8.html">Not Knowing (3)</a> <span class="refs">(SN 22.24 <a href="https://suttacentral.net/sn22.24" target="_blank">Directly Knowing</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T&nbsp;99.1b16</a>]</span></h3>
+    <p class="synopsis">Knowing and abandoning desire for the aggregates, one’s mind can be liberated and end suffering.</p>
 
-    <h3>9. <a href="">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h3>
-    <p class="synopsis"></p>
+    <h3>9. <a href="SA1_9.html">Not Knowing (4)</a> <span class="refs">(SN 22.24 <a href="https://suttacentral.net/sn22.24" target="_blank">Directly Knowing</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T&nbsp;99.1c2</a>]</span></h3>
+    <p class="synopsis">Knowing and abandoning desire for the aggregates, one’s mind can be liberated and transcend the fear of birth, old age, illness, and death.</p>
 
-    <h3>10. <a href="">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h3>
-    <p class="synopsis"></p>
+    <h3>10. <a href="SA1_10.html">Delighting in Form</a> <span class="refs">(SN 22.29: <a href="https://suttacentral.net/sn22.29" target="_blank">Taking Pleasure</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p001" target="_blank">T&nbsp;99.1c11</a>]</span></h3>
+    <p class="synopsis">Delighting in the aggregates is the same as delighting in suffering, which makes liberation from it impossible.</p>
 
-
-    <h3>11. <a href="SA_758.html">The Fear of Losing Mother or Son</a> <span class="refs">(AN 3.62: <a href="https://suttacentral.net/an3.62" target="_blank">Perils </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b5</a>]</span></h3>
-    <p class="synopsis">The Buddha describes three common fears of losing one’s mother or son during disasters, but he says those fears really come from sickness, old age, and death. The way to escaping these fears is the eightfold path.</p>
-
-    <h3>12. <a href="SA_759.html">Three Sensations</a> <span class="refs">(SN 45.29: <a href="https://suttacentral.net/sn45.29" target="_blank">Feeling</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c17</a>]</span></h3>
+    <!--<h3>11. <a href="SA_1_11.html"></a> <span class="refs">(SN 45.29: <a href="https://suttacentral.net/sn45.29" target="_blank">Feeling</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c17</a>]</span></h3>
     <p class="synopsis">The eightfold path is the way to end the three sensations.</p>
 
-    <h3>13. <a href="SA_760.html">Three Disagreeable Things</a> <span class="refs">(AN 10.76: <a href="https://suttacentral.net/an10.76" target="_blank">Three Things</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c27</a>]</span></h3>
+    <h3>12. <a href="SA_760.html">Three Disagreeable Things</a> <span class="refs">(AN 10.76: <a href="https://suttacentral.net/an10.76" target="_blank">Three Things</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199c27</a>]</span></h3>
     <p class="synopsis">The eightfold path is the way to end old age, illness, and death.</p>
+
+    <h3>13. <a href="SA_761.html">Learners and Non-Learners</a> <span class="refs">(SN 45.13: <a href="https://suttacentral.net/sn45.13" target="_blank">A Trainee</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a14</a>]</span></h3>
+    <p class="synopsis">The terms “learner” and “non-learner” refer to disciples who are learning or have finished learning the eightfold path.</p>
 
     <h3>14. <a href="SA_761.html">Learners and Non-Learners</a> <span class="refs">(SN 45.13: <a href="https://suttacentral.net/sn45.13" target="_blank">A Trainee</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0200" target="_blank">T&nbsp;99.200a14</a>]</span></h3>
     <p class="synopsis">The terms “learner” and “non-learner” refer to disciples who are learning or have finished learning the eightfold path.</p>
