--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,7 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <ul style="list-style-type:none; text-indent:-90px; margin-left: 50px">
+  <li>27-Oct-2019: Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.5-10</a> have been added.
   <li>23-Oct-2019: Translations of <a href="03_samyukta\SA_01\contents.html">SA 1.1-4</a> have been added.</li>
   <li>22-Oct-2019: Published table of contents for <a class="title" href="03_samyukta/contents.html">The Related Discourses</a> based on Yinshun's reconstructed version. It includes 7 parts and 51 groups of sutras.</li>
   <li>14-Oct-2019: Sutras 748-754 and 758-761 have been added to the <a class="title" href="03_samyukta\contents.html">Related Discourses</a>.</li>
