--- a/03_samyukta/SA_01/contents.html
+++ b/03_samyukta/SA_01/contents.html
@@ -9,7 +9,7 @@ base: ../../
     <h2>1. The Aggregates <span class="refs">(cf. <em>SN</em> 22: Khadhasaṃyutta)</span></h2>
     <p>This group of sutras has the common theme of describing the five aggregates and how they relate to Buddhist practice. These aggregates are form, feeling, perception, intention, and consciousness. The five aggregates represent the things that people can identify with as a self, and they are the basic constituents of everyday experience. When they come together, they form sentient beings, which in Buddhist thought includes animals, humans, and other beings like spirits, demons, and gods. </p>
     <p>The Aggregates group consists of 110 full sutras plus 68 abbreviated sutra variants for a total of 178 sutras. Below is a list of the English translations currently available with brief synopses of their contents.</p> <p>Pali equivalents are listed in () and the sourcetext is indicated in [].</p>
-    <p>Note: All titles for <em>SA</em> sutras are supplied by the translator as an aid for the reader.</p>
+    <p>Note: All titles for <em>SA</em> sutras are supplied by the translator as an aid for the reader. In this group, the sutra titles are based on the summary verses as much as possible.</p>
     <hr/>
     <h3>1. <a href="SA1_1.html">Impermanent</a> <span class="refs">(SN <a href="https://suttacentral.net/sn22.12" target="_blank">22.12</a>, <a href="https://suttacentral.net/sn22.51" target="_blank">22.51</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0001" target="_blank">T 99.1a6</a>]</span></h3>
     <p class="synopsis">When rightly contemplated, the aggregates are recognized to be impermanent. That contemplation leads to disillusionment and dispassion, which then lead to liberation.</p>
