Converted SA13.1-3 to the new segmented format in _data and published them.

--- a/03_samyukta/SA_13/SA13_14.html
+++ b/03_samyukta/SA_13/SA13_14.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: The Related Discourses | 749. Forerunners
 type: translation
 en: SA_f28_748-796_en
-number: 749
+number: 761
 base: ../../
+previous: SA13_13.html
 ---
