--- a/03_samyukta/SA_13/SA13_4.html
+++ b/03_samyukta/SA_13/SA13_4.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: The Related Discourses | 761. Learners and Non-Learners
 type: translation
 en: SA_f28_748-796_en
-number: 761
+number: 751
 base: ../../
+previous: SA13_3.html
+next: SA13_5.html
 ---
