--- a/03_samyukta/SA_13/SA13_6.html
+++ b/03_samyukta/SA_13/SA13_6.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: The Related Discourses | 759. Three Sensations
 type: translation
 en: SA_f28_748-796_en
-number: 759
+number: 753
 base: ../../
+previous: SA13_5.html
+next: SA13_7.html
 ---
