--- a/03_samyukta/SA_13/SA13_11.html
+++ b/03_samyukta/SA_13/SA13_11.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: The Related Discourses | 750. The Roots of Good and Bad
 type: translation
 en: SA_f28_748-796_en
-number: 750
+number: 758
 base: ../../
+previous: SA13_7.html
+next: SA13_12.html
 ---
