--- a/03_samyukta/SA_13/SA13_12.html
+++ b/03_samyukta/SA_13/SA13_12.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: The Related Discourses | 751. The Right Undertaking
 type: translation
 en: SA_f28_748-796_en
-number: 751
+number: 759
 base: ../../
+previous: SA13_11.html
+next: SA13_13.html
 ---
