--- a/03_samyukta/SA_13/SA13_13.html
+++ b/03_samyukta/SA_13/SA13_13.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: The Related Discourses | 752. Desire
 type: translation
 en: SA_f28_748-796_en
-number: 752
+number: 760
 base: ../../
+previous: SA13_12.html
+next: SA13_14.html
 ---
