--- a/03_samyukta/SA_13/SA13_5.html
+++ b/03_samyukta/SA_13/SA13_5.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: The Related Discourses | 748. The First Sign
 type: translation
 en: SA_f28_748-796_en
-number: 748
+number: 752
 base: ../../
+previous: SA13_4.html
+next: SA13_6.html
 ---
