--- a/03_samyukta/SA_13/SA13_7.html
+++ b/03_samyukta/SA_13/SA13_7.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: The Related Discourses | 754. Requirements of Concentration
 type: translation
 en: SA_f28_748-796_en
 number: 754
 base: ../../
+previous: SA13_6.html
+next: SA13_11.html
 ---
