Segmented and edited SA13.4-5. Changed the way verse is parsed by the sutra-verse-en include. Applied a temp fix to MA 7 so its unsegmented verse displays correctly. Typos in DA 27 fixed.

--- a/03_samyukta/SA_13/contents.html
+++ b/03_samyukta/SA_13/contents.html
@@ -23,8 +23,8 @@ base: ../../
     <h3>3. <a href="SA13_3.html">The Roots of Good and Evil</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b26</a>]</span></h3>
     <p class="synopsis">The root of all evil is ignorance, and the root of all good is insight.</p>
 
-    <h3>4. <a href="SA13_4.html">The Right Undertaking</a> <span class="refs">(SN 45.24: <a href="https://suttacentral.net/sn45.24" target="_blank">Practice (2nd)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198c14</a>]</span></h3>
-    <p class="synopsis">Following the eightfold path is the correct undertaking for lay and renunciant practitioners.</p>
+    <h3>4. <a href="SA13_4.html">The Right Task</a> <span class="refs">(SN 45.24: <a href="https://suttacentral.net/sn45.24" target="_blank">Practice (2nd)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198c14</a>]</span></h3>
+    <p class="synopsis">Following the eightfold path is the correct task for lay and renunciant practitioners.</p>
 
     <h3>5. <a href="SA13_5.html">Desire</a> <span class="refs">(SN 45.30: <a href="https://suttacentral.net/sn45.30" target="_blank">With Uttiya</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198c27</a>]</span></h3>
     <p class="synopsis">Desire is not the thing desired but the craving of it. The eightfold path is the way to ending this problem.</p>
