Edited and segmented SA13.6-7.

--- a/03_samyukta/SA_13/contents.html
+++ b/03_samyukta/SA_13/contents.html
@@ -12,8 +12,6 @@ base: ../../
     <p>Note: All titles for <em>SA</em> sutras are supplied by the translator as an aid for the reader.</p>
     <hr/>
 
-
-
     <h3>1. <a href="SA13_1.html">The First Sign</a> <span class="refs">(SN 45.55: <a href="https://suttacentral.net/sn45.55" target="_blank">Accomplishment in Proper Attention (1st) </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0198" target="_blank">T 99.198b5</a>]</span></h3>
     <p class="synopsis">Right view is the first sign of liberation like the first light of dawn is the first sign of sunrise.</p>
 
@@ -32,7 +30,7 @@ base: ../../
     <h3>6. <a href="SA13_6.html">Deathlessness</a> <span class="refs">(SN 45.7: <a href="https://suttacentral.net/sn45.7" target="_blank">A Mendicant (2nd)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a13</a>]</span></h3>
     <p class="synopsis">The Buddha explains that the deathless in his teaching is the end of the contaminants that lead to rebirth.</p>
 
-    <h3>7. <a href="SA13_7.html">Roots and Requirements</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a22</a>]</span></h3>
+    <h3>7. <a href="SA13_7.html">Requirements</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a22</a>]</span></h3>
     <p class="synopsis">The Buddha explains that the first seven parts of the eightfold path are the roots and requirements of right concentration.</p>
 
     <!-- These sutras are abbreviated with a summary in source
