Added translations and reconstituted Chinese for SA 13.8-10. Edited various typos, contents file, etc.

--- a/03_samyukta/SA_13/contents.html
+++ b/03_samyukta/SA_13/contents.html
@@ -30,20 +30,17 @@ base: ../../
     <h3>6. <a href="SA13_6.html">Deathlessness</a> <span class="refs">(SN 45.7: <a href="https://suttacentral.net/sn45.7" target="_blank">A Mendicant (2nd)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a13</a>]</span></h3>
     <p class="synopsis">The Buddha explains that the deathless in his teaching is the end of the contaminants that lead to rebirth.</p>
 
-    <h3>7. <a href="SA13_7.html">Requirements</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a22</a>]</span></h3>
+    <h3>7. <a href="SA13_7.html">Requirements</a> <span class="refs">(SN 45.28: <a href="https://suttacentral.net/sn45.28" target="_blank">Immersion</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199a22</a>]</span></h3>
     <p class="synopsis">The Buddha explains that the first seven parts of the eightfold path are the roots and requirements of right concentration.</p>
 
-    <!-- These sutras are abbreviated with a summary in source
-          Reconstruct them in the future
-    <h3>8. <a href="SA13_8.html">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h3>
-    <p class="synopsis"></p>
+    <h3>8. <a href="SA13_8.html">Desire (2)</a> <span class="refs">(SN 45.30: <a href="https://suttacentral.net/sn45.30" target="_blank">With Uttiya</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T 99.199b03</a>]</span></h3>
+    <p class="synopsis">Desire is not the thing desired but the craving of it. The eightfold path is the way to ending this problem.</p>
 
-    <h3>9. <a href="SA13_9.html">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h3>
-    <p class="synopsis"></p>
+    <h3>9. <a href="SA13_9.html">Deathlessness (2)</a> <span class="refs">(SN 45.7: <a href="https://suttacentral.net/sn45.7" target="_blank">A Mendicant (2nd)</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b03</a>]</span></h3>
+    <p class="synopsis">The Buddha explains that the deathless in his teaching is the end of the contaminants that lead to rebirth.</p>
 
-    <h3>10. <a href="SA13_10.html">title</a> <span class="refs">(Pali parallel SC link) [link to cbeta sourcetext]</span></h3>
-    <p class="synopsis"></p>
-    -->
+    <h3>10. <a href="SA13_10.html">Requirements (2)</a> <span class="refs">(SN 45.28: <a href="https://suttacentral.net/sn45.28" target="_blank">Immersion</a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b03</a>]</span></h3>
+    <p class="synopsis">The Buddha explains that the first seven parts of the eightfold path are the roots and requirements of right concentration.</p>
 
     <h3>11. <a href="SA13_11.html">The Fear of Losing Mother or Son</a> <span class="refs">(AN 3.62: <a href="https://suttacentral.net/an3.62" target="_blank">Perils </a>) [<a href="http://dia.dila.edu.tw/pages/Tv02p0199" target="_blank">T&nbsp;99.199b5</a>]</span></h3>
     <p class="synopsis">The Buddha describes three common fears of losing one’s mother or son during disasters, but he says those fears really come from sickness, old age, and death. The way to escaping these fears is the eightfold path.</p>
